# clothing-design-tool

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
slice-0/scripts/: photo_to_svg.py  render_svg_preview.py
slice-1/: README.md
slice-1/app/: main.py  models.py  pipeline.py
slice-1/tests/: test_coordinate_mapping.py  test_endpoints.py  test_models.py  test_pipeline.py
slice-1/web/: app.js  index.html  style.css
slice-2/editor/: main.py  models.py  photo.py  seed.py  service.py
slice-2/editor/detect/: detector.py  schema.py
slice-2/editor/render/: backend.py  fabrics.py  prompt.py  service.py  store.py
slice-2/tests/: test_api.py  test_backend.py  test_detect_detector.py  test_detect_schema.py  test_fabrics.py  test_fal_renderer.py  test_garments.py  test_photo_api.py  test_prompt.py  test_render_api.py  test_render_service.py  test_render_store.py  test_render_store_delete.py  test_seed.py  test_service.py  test_service_multigarment.py
slice-2/web/: editor.html  index.html  new.html  style.css
slice-2/web/js/: api.js  app.js  feedback.js  flatview.js  forms.js  history.js  home.js  new_from_photo.js  render.js  state.js
src/indumentaria/dsl/: assets.py  components.py  examples.py  garment.py  materials.py  measurements.py  operations.py  store.py  versioning.py  vocab.py
tests/indumentaria/: conftest.py  test_assets.py  test_components.py  test_garment.py  test_materials.py  test_measurements.py  test_operations.py  test_photo_pipeline_location.py  test_store.py  test_store_multigarment.py  test_versioning.py  test_vocab.py
