[project]
name = "diseno-indumentaria"
version = "0.1.0"
description = "Herramienta de diseño de indumentaria: foto → flat SVG, editor de componentes, render y detección por IA (FastAPI + Konva + SAM 2 + Claude)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "fal-client>=0.5.0",
    "fastapi>=0.137.1",
    "Pillow>=10.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "requests>=2.31.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["slice-1", "slice-2", "src"]
testpaths = ["slice-1/tests", "slice-2/tests", "tests"]
